--- a/website/site/index.html
+++ b/website/site/index.html
@@ -118,8 +118,8 @@
 
   <div class="b-example-divider"></div>
   <div class="col-lg-8 mx-auto p-4 py-md-5">
-  <h1>Welcome to Easy-Pretty with Bootstrap!</h1>
-    <p class="fs-5 col-md-8">Replace this class here with your own blurb.  I just wanted something pretty</p>
+  <h1>Welcome to Halie's website!</h1>
+    <p class="fs-5 col-md-8">Thanks for visiting. Nothing to see as you can tell... bye.</p>
 
    </div>
     <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
